--- a/Demo/Project/Project.vcxproj.filters
+++ b/Demo/Project/Project.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="src\incl\Terrain.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\Timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\incl\Sky.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp">
@@ -48,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\Sky.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Timer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
